Fix H4 Layout Bug

--- a/stylesheets/aafs.css
+++ b/stylesheets/aafs.css
@@ -33,13 +33,13 @@
     /*color: #4e7fbf;*/
     font-family: 'Open Sans Condensed';
     font-weight: 300;
-    padding: 12px 0;
     -webkit-text-shadow: 0px 0px 1px #ccc;
     -moz-text-shadow: 0px 0px 1px #ccc;
     -o-text-shadow: 0px 0px 1px #ccc;
     -ms-text-shadow: 0px 0px 1px #ccc;
     text-shadow: 0px 0px 1px #ccc;
     font-size:1.618em;
+    padding:12px 0;
 }
 
 div.infobox.infobox--hotline {
@@ -195,4 +195,8 @@ li.active a {
 
 #carousel-news li.active a {
     color:#bf382c;
+}
+
+#carousel-news li>h4 {
+    margin:0 0 10px;
 }
